--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.0.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "resend": "^4.0.1-alpha.0",
